--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -42,3 +42,13 @@ div.kv-avatar div.file-input div.file-preview {
 	padding-top: 150px;
 	padding-bottom: 150px;
 }
+
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
